--- a/Claymore/Claymore.csproj
+++ b/Claymore/Claymore.csproj
@@ -35,9 +35,9 @@
     <ApplicationIcon>Claymore.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Castle.Core">
-      <HintPath>..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Castle.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.3.3.3\lib\net45\Castle.Core.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Castle.Windsor">
       <HintPath>..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
@@ -78,7 +78,6 @@
   <ItemGroup>
     <Compile Include="Controller.cs" />
     <Compile Include="Models\ServerItems.cs" />
-    <Compile Include="Starup\Bootstrap.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Starup\Options.cs" />
@@ -92,32 +91,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="..\packages\Castle.Core.3.3.0\lib\net45\Castle.Core.dll">
-      <Link>Resources\Castle.Core.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll">
-      <Link>Resources\Castle.Windsor.dll</Link>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll">
-      <Link>Resources\CommandLine.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Unofficial.Microsoft.SQLServer.SMO.11.0.3000.0\lib\Microsoft.SqlServer.ConnectionInfo.dll">
-      <Link>Resources\Microsoft.SqlServer.ConnectionInfo.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Unofficial.Microsoft.SQLServer.SMO.11.0.3000.0\lib\Microsoft.SqlServer.Management.Sdk.Sfc.dll">
-      <Link>Resources\Microsoft.SqlServer.Management.Sdk.Sfc.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Unofficial.Microsoft.SQLServer.SMO.11.0.3000.0\lib\Microsoft.SqlServer.Smo.dll">
-      <Link>Resources\Microsoft.SqlServer.Smo.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Unofficial.Microsoft.SQLServer.SMO.11.0.3000.0\lib\Microsoft.SqlServer.SmoExtended.dll">
-      <Link>Resources\Microsoft.SqlServer.SmoExtended.dll</Link>
-    </EmbeddedResource>
-    <EmbeddedResource Include="..\packages\Unofficial.Microsoft.SQLServer.SMO.11.0.3000.0\lib\Microsoft.SqlServer.SqlEnum.dll">
-      <Link>Resources\Microsoft.SqlServer.SqlEnum.dll</Link>
-    </EmbeddedResource>
     <Content Include="Claymore.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
