--- a/Claymore/packages.config
+++ b/Claymore/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
-  <package id="Unofficial.Microsoft.SQLServer.SMO" version="11.0.3000.0" targetFramework="net45" />
+  <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
+  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
+  <package id="Unofficial.Microsoft.SQLServer.SMO.2014" version="12.0.2000.8" targetFramework="net45" />
 </packages>
