--- a/Claymore/packages.config
+++ b/Claymore/packages.config
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
-  <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
+  <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Fody" version="1.28.3" targetFramework="net45" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="8.0.1" targetFramework="net45" />
+  <package id="Fody" version="1.29.4" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
   <package id="Unofficial.Microsoft.SQLServer.SMO.2014" version="12.0.2000.8" targetFramework="net45" />
 </packages>
